--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,4 +33,9 @@ button {
     font-weight: 600;
     color: #fff;
     border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
 }
